# rwini-rs

./: Cargo.toml  README.md
src/data/: ini.rs  mod.rs
src/data/rwini/: mod.rs  types.rs
src/parser/: ini.rs  mod.rs  rwini.rs
