[package]
name = "rwini"
version = "0.1.0"
edition = "2021"
description = "A lib for parsing Rusted Warfare ini in Rust."
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.190", features = ["derive"] }
